# HASE

./: README.md  Test.bash  pyproject.toml  requirements.txt  sql_app.db
.devcontainer/: devcontainer.json
src/: crud.py  database.py  main.py  models.py  schemas.py
src/tests/: test_main.py
