[project]
name = "HASE"
version = "0.1.0"
description = "A Simple User Test for Software Engineers"
authors = [
    { name = "Butch78", email = "matthewtyleraylward@hotmail.com" }
]
dependencies = [
    "uvicorn>=0.23.2",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "pytest>=7.4.3",
    "sqlalchemy>=2.0.22",
    "pytest_timestamper>=0.0.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
